--- a/index.html
+++ b/index.html
@@ -72,16 +72,21 @@
 <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
     <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold lh-1">I'm a Front-End Dev🧑🏿‍💻</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <p class="lead">👋 Hello and welcome! I'm Favour, a passionate Front-End Developer with a love for creating visually stunning and
+        user-friendly websites. This portfolio is a glimpse into my journey, showcasing a collection of projects that reflect my
+        dedication to clean code, responsive design, and innovative solutions.
+        
+        Feel free to browse through my projects, delve into my skills and experience, and don't hesitate to get in touch. Let's
+        connect, collaborate, and build something amazing together!
+        
+        Happy exploring! 🚀</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Skills</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">About Me</button>
         </div>
     </div>
     <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-        <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
+        <img class="rounded-lg-3" src="./images/5I2A2402.JPG" alt="" height="420" width="360" >
     </div>
 </div>
 </div>
@@ -136,7 +141,7 @@
             <a href="">Instagram</a>
         </li>
         <li class="footer">
-            <a href="">Twitter</a>
+            <a href="">LinkedIn</a>
         </li>
     </ul>
     </div>
