--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="work">Work</a>
+                            <a class="nav-link active" aria-current="page" href="#work">Work</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#skills">Skills</a>
@@ -92,7 +92,7 @@
 </div>
 
 
-<hr class="featurette-divider">
+<hr class="featurette-divider" id="work">
 
 <h2 class="featurette-heading">Work<span class="text-muted"> Done.</span></h2>
 
@@ -102,10 +102,10 @@
             <div class="card">
                 <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Heroseon</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://phavizy.github.io/refractor-code/" class="btn btn-primary">Go to site</a>
                 </div>
             </div>
         </div>
@@ -113,10 +113,10 @@
             <div class="card">
                 <img src="./images/02-portfolio-4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Portfolio</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                         content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://phavizy.github.io/portfolio-v2/" class="btn btn-primary">Go to site</a>
                 </div>
             </div>
         </div>
@@ -124,14 +124,14 @@
             <div class="card">
                 <img src="./images/02-run-buddy.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Other Portfolio</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                         content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://phavizy.github.io/portfolio/" class="btn btn-primary">Go to site</a>
                 </div>
             </div>
         </div>
-        <hr class="featurette-divider">
+        <hr class="featurette-divider" id="skills">
         
         <div class="row featurette">
             <div class="col-md-7">
@@ -158,7 +158,7 @@
             </div>
         </div>
 
-<hr class="featurette-divider">
+<hr class="featurette-divider" id="about">
             
         <div class="row featurette">
             <div class="col-md-7 order-md-2">
