--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
     <link href="./css/heroes.css" rel="stylesheet">
     <style>
@@ -81,12 +81,12 @@
         
         Happy exploring! 🚀</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Skills</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">About Me</button>
+           <a href="#skills" ><button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Skills</button></a>
+        <a href="#about"> <button type="button" class="btn btn-outline-secondary btn-lg px-4">About Me</button></a>
         </div>
     </div>
     <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-        <img class="rounded-lg-3" src="./images/5I2A2402.JPG" alt="" height="420" width="360" >
+        <img class="rounded-lg-3" src="./images/5I2A2402.JPG" alt="Profile" height="420" width="360" >
     </div>
 </div>
 </div>
@@ -100,7 +100,7 @@
     <div class="row">
         <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
             <div class="card">
-                <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="...">
+                <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="Heroseon-logo">
                 <div class="card-body">
                     <h5 class="card-title">Heroseon</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -148,8 +148,8 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="200"
+                    height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#eee" />
@@ -167,8 +167,8 @@
                     layout would work with some actual real-world content in place.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="200"
+                    height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#eee" />
